# shadow-matrix

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c  test.c  test.h
.github/workflows/: config.yml
inc/: matrix_shd.h
src/: matrix_shd.c
test/: test.c
test/inc/: test_data.h  test_utils.h
test/src/: test_utils.c
