cmake_minimum_required(VERSION 3.16)
project(matrix_shadow C)
set(CMAKE_C_STANDARD 99)
set(SOURCES src/matrix_shd.c main.c)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")
set(PROJ_INCLUDE "./inc")
add_executable(shadow_matrix ${SOURCES})
target_include_directories(shadow_matrix PUBLIC ${PROJ_INCLUDE})
